# python-dev

./: .gitignore  Dockerfile  Dockerfile-parent  pyproject.toml  repro-config  setup.cfg  setup.py
exports/: base-makefile  base-manifest  base-setup  code-makefile  code-manifest  code-setup  code-targets  default-manifest  default-setup  manifest-base  manifest-make-default  setup-make-default
modules/: greetings.py
src/greetings_package/: __main__.py
